--- a/requirements.txt
+++ b/requirements.txt
@@ -113,3 +113,7 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
+transformers==4.43.3
+datasets==2.20.0
+evaluate==0.4.2
+accelerate==0.34.2
